--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,6 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
    // implementation 'io.coil-kt:coil-compose:2.2.2'
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+
 }
